# IIS_projekt

./: Dockerfile  data.dvc  pyproject.toml
.dvc/: config
.github/workflows/: data.yaml  deploy.yaml  github.yaml  model.yaml
cache/files/: md5.dvc
data/bike/: processed_bike_data.csv
data/processed/: bike_data.csv  current_data.csv  test.csv  train.csv  weather_data.csv
data/raw/: 2023-05-13_14-56-16.csv  2023-05-13_15-13-14.csv  2023-05-13_15-42-33.csv  2023-05-13_16-15-40.csv  2023-05-13_16-26-22.csv  2023-05-13_17-13-34.csv  2023-05-13_18-15-31.csv  2023-05-13_19-09-53.csv  2023-05-13_21-43-57.csv  2023-05-13_21-47-29.csv  2023-05-13_22-13-06.csv  2023-05-13_23-10-59.csv  2023-05-14_00-11-42.csv  2023-05-14_01-12-32.csv  2023-05-14_03-11-46.csv  2023-05-14_04-31-59.csv  2023-05-14_05-13-13.csv  2023-05-14_06-15-33.csv  2023-05-14_07-11-57.csv  2023-05-14_10-15-10.csv  2023-05-14_11-11-34.csv  2023-05-14_12-12-47.csv  2023-05-14_13-10-09.csv  2023-05-14_14-24-14.csv  2023-05-14_15-13-53.csv  2023-05-14_16-10-58.csv  2023-05-14_17-12-21.csv  2023-05-14_18-15-44.csv  2023-05-14_19-10-44.csv  2023-05-14_20-14-40.csv  2023-05-14_21-10-26.csv  2023-05-14_22-13-01.csv  2023-05-14_23-12-03.csv  2023-05-15_00-11-39.csv  2023-05-15_01-13-05.csv  2023-05-15_03-10-15.csv  2023-05-15_04-33-28.csv  2023-05-15_05-13-49.csv  (+1000 more)
great_expectations/: .gitignore  great_expectations.yml
models/: linear
notebooks/: model.ipynb  process_bike_data.ipynb
reports/: data_drift.html  metrics.txt  train_metrics.txt
test/: test_bike_data.py  test_server_api.py  test_weather_data.py
(+35 files in other folders)
