[tool.poetry]
name = "bike-availability-mb"
version = "0.1.0"
description = ""
authors = ["anagasperin <ana.gasperin@student.um.si>"]
readme = "README.md"
packages = [{include = "bike_availability_mb"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
requests = "^2.28.2"
datetime = "^5.1"
unicodecsv = "^0.14.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
