[tool.poetry]
name = "bike-availability-mb"
version = "0.1.0"
description = ""
authors = ["anagasperin <ana.gasperin@student.um.si>"]
readme = "README.md"
packages = [{include = "bike_availability_mb"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
requests = "^2.28.2"
datetime = "^5.1"
unicodecsv = "^0.14.1"
flask = "^2.0.2"
flask-cors = "^3.0.10"
scikit-learn = "^1.3.0"
dvc = "2.51.0"
dvc-s3 = "2.21.0"
great-expectations = "^0.17.3"
evidently = "^0.3.1"
mlflow = "^2.3.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.3"
black = "^23.3.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
